<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>org.zeroturnaround.demoapp</groupId>
  <artifactId>jrebel-testapp-cli</artifactId>
  <version>1.0</version>

  <packaging>jar</packaging>

  <name>Swing demoapp for JRebel testing</name>
  
  <properties>
    <my.mainclass>org.zeroturnaround.demoapps.swing.Main</my.mainclass>
  </properties>

  <dependencies>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.17</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <phase>compile</phase>
          <source>1.5</source>
          <target>1.5</target>
          <optimise>true</optimise>
          <debug>true</debug>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.2</version>


        <configuration>
          <executable>java</executable>
          <arguments>
            <argument>-classpath</argument>
            <classpath />
            <argument>-noverify</argument>
            <!-- 
            <argument>-Drebel.myjrebel.host=my.fakesite.com</argument>
            <argument>-Drebel.notification.url=http://127.0.0.1:44573/jrebel/notifications</argument>
            <argument>-Drebel.license.url=http://localhost:9001/8b8c6322-8d48-4a65-ade2-a721f144c61a</argument>           
            <argument>-Drebel.license.url=http://localhost:8080/f351c345-4857-420a-8dc9-8780bb8e0f55</argument>
            -->

            <!-- test garbage collection -->
            <!-- 
            <argument>-verbose:gc</argument>
            <argument>-XX:+PrintGCTimeStamps</argument>
            <argument>-XX:+PrintGCDetails</argument>
            <argument>-Xloggc:my-gc-logfile.log</argument>
            -->
            
            <!-- logging -->
            <!--  
            <argument>-Drebel.log=true</argument>
            -->
            <argument>-javaagent:/opt/jrebel/jrebel.jar</argument>

            <!-- 
            <argument>-Drebel.myjrebel.host=my.fakesite.com</argument>
            <argument>-Drebel.log.trace=true</argument>
            <argyument>-Drebel.licensing.async=true</argyument>
            -->
            
            <!-- debugguer -->
            <!-- 
            <argument>-Xdebug</argument>
            <argument>-Xrunjdwp:transport=dt_socket,address=63040,suspend=n,server=y</argument>
            -->
            
            <argument>org.zeroturnaround.demoapps.swing.Main</argument>
          </arguments>
        </configuration>

        <executions>
          <execution>
            <phase>install</phase>
            <goals>
              <goal>exec</goal>
            </goals>
          </execution>
        </executions>

      </plugin>

<!-- 
      -->
      <plugin>
        <groupId>org.zeroturnaround</groupId>
        <artifactId>jrebel-maven-plugin</artifactId>
        <version>1.0.7</version>
        <executions>
          <execution>
            <id>generate-rebel-xml</id>
            <phase>process-resources</phase>
            <goals>
              <goal>generate</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          
          <archive>
            <manifest>
              <mainClass>${my.mainclass}</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <mainClass>${my.mainclass}</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>

    </plugins>

    <pluginManagement>
      <plugins>
        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.zeroturnaround</groupId>
                    <artifactId>jrebel-maven-plugin</artifactId>
                    <versionRange>[1.0.7,)</versionRange>
                    <goals>
                      <goal>generate</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore></ignore>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
